# rubiks_cube_solver

./: CMakeLists.txt  README.md  main.cpp
bits/: stdc++.h
